--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -9,6 +9,7 @@
   text-align:center;
   font-family: 'Dancing Script', arial, serif;
   h1 { 
+    font-family: 'Dancing Script', arial, serif;
     font-size:4.5em;
     margin-top:1em;
     line-height:1.5em;
