--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     = csrf_meta_tag
 
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Dancing+Script&v1'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Calligraffitti&v1'
   %body.bp
     .container
       #header.span-24.last
