--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,41 +1,29 @@
-/* line 2, ../../app/stylesheets/site.scss */
 .container {
+  font-size: 1.2em;
   background: url("/images/continuous_bg.png") repeat-y center top;
-  font-family: 'Dancing Script', arial, serif;
-}
-/* line 5, ../../app/stylesheets/site.scss */
-.container h1 {
-  font-family: 'Calligraffitti', arial, serif;
-}
+  font-family: 'Dancing Script', arial, serif; }
+  .container h1 {
+    font-family: 'Dancing Script', arial, serif; }
 
-/* line 10, ../../app/stylesheets/site.scss */
 #header {
   height: 500px;
   background: url("/images/header_bg.png") no-repeat center top;
-  text-align: center;
-}
-/* line 14, ../../app/stylesheets/site.scss */
-#header h1 {
-  font-family: 'Calligraffitti', arial, serif;
-  font-size: 4.5em;
-  margin-top: 1em;
-  line-height: 1.5em;
-}
+  text-align: center; }
+  #header h1 {
+    font-family: 'Dancing Script', arial, serif;
+    font-size: 4.5em;
+    margin-top: 1em;
+    line-height: 1.2em; }
 
-/* line 22, ../../app/stylesheets/site.scss */
 #footer {
   background: url("/images/footer_bg.png") no-repeat center bottom;
-  height: 200px;
-}
+  height: 200px; }
 
-/* line 27, ../../app/stylesheets/site.scss */
 #boxcard {
   margin: 0 auto;
   width: 625px;
-  z-index: 1;
-}
+  z-index: 1; }
 
-/* line 33, ../../app/stylesheets/site.scss */
 #boxcard div {
   float: left;
   width: 100px;
@@ -51,17 +39,12 @@
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
+  z-index: 2; }
 
-/* line 51, ../../app/stylesheets/site.scss */
 #boxcard div img {
   border: none;
-  z-index: 3;
-}
+  z-index: 3; }
 
-/* line 56, ../../app/stylesheets/site.scss */
 .opacity {
   opacity: .6;
-  filter: alpha(opacity=60);
-}
+  filter: alpha(opacity=60); }
