--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,8 @@
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Calligraffitti&v1'
     = stylesheet_link_tag "http://www.webputty.net/css/agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM", :id => "agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM"
     = javascript_include_tag "http://www.webputty.net/js/agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM"
+
+    =yield :header
   %body.bp
     .container
       #header.span-24.last
