--- a/app/views/welcome/pics.html.haml
+++ b/app/views/welcome/pics.html.haml
@@ -2,10 +2,11 @@
   -for img in @images
     =image_tag "image_gallery/#{img}"
 
-= javascript_include_tag "galleria-1.2.4"
-:javascript
-  Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
-  $('#gallery').galleria({
-    width:500,
-    height:500
-  });
+=content_for :javascript do
+  = javascript_include_tag "galleria-1.2.4"
+  :javascript
+    Galleria.loadTheme('/galleria/themes/classic/galleria.classic.js');
+    $('#gallery').galleria({
+      width:800,
+      height:600
+    });
