--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -1,23 +1,64 @@
+$blue_ribbon:#367cda;
 
 .container {
   font-size:1.2em;
   background: url('/images/continuous_bg.png') repeat-y center top;
-  font-family: 'Dancing Script', arial, serif;
-  h1 {
-    font-family: 'Dancing Script', arial, serif;
-  }
+  font-family: 'Marvel', arial, serif;
 }
 
 #header {
-  height: 500px;
+  height: 175px;
   background: url('/images/header_bg.png') no-repeat center top;
-  text-align:center;
-  h1 { 
-    font-family: 'Dancing Script', arial, serif;
-    font-size:4.5em;
-    margin-top:1em;
+  font-family: 'Marvel', arial, serif;
+  h3, h2 { 
+    margin:60px 12px 0px 12px;
     line-height:1.2em;
   }
+}
+ul#top_nav
+{
+  position:relative;
+  padding:0;
+  margin-left:8px;
+  border-right:1px solid $blue_ribbon;
+  font-family: 'Delius', arial, serif;
+  li 
+  { 
+    list-style:none;
+    font-size:2em;
+    height:51px;
+    &:hover { background: $blue_ribbon; }
+    a 
+    { 
+      color:$blue_ribbon;
+      &:hover { color: darken($blue_ribbon, 30%); }
+      padding-left:10px;
+      display:block; 
+      text-decoration:none;
+    }
+  }
+}
+
+#main_content
+{
+  margin-top:1em;
+}
+
+ul#news_list
+{
+  list-style:none;
+  li.first { border-top:none;}
+  li 
+  { 
+    border-top:1px solid lighten($blue_ribbon, 20%);
+    margin-top:1em;
+  }
+  li .date 
+  {
+    font-weight:bold;
+    margin-bottom:.5em;
+  }
+
 }
 
 #footer {
