--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,22 +11,25 @@
     = csrf_meta_tag
 
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Dancing+Script&v1'
-    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Calligraffitti&v1'
-    = stylesheet_link_tag "http://www.webputty.net/css/agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM", :id => "agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM"
-    = javascript_include_tag "http://www.webputty.net/js/agtzfmNzc2ZpZGRsZXIMCxIEUGFnZRjk9wcM"
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Marvel'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Delius'
 
     =yield :header
   %body.bp
     .container
       #header.span-24.last
-        %h1
+        %h2{ :style => "float:left;"}
           Hayley Facer & Christopher Marshall 
-          %br/
-          are
-          %br/
-          Getting Married
+        %h3{ :style => "float:right;"}
+          7.21.12
       .container.span-24
-        .span-20.prepend-2.append-2
+        .span-4
+          %ul#top_nav
+            %li= link_to 'Home', root_path
+            %li= link_to 'Pics', pics_path
+            %li= link_to 'Game', game_path
+
+        #main_content.span-18.append-2.last
           = yield
       #footer.span-22.prepend-2.last
     = javascript_include_tag 'jquery-1.6.1.min.js'
