--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
       = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
     = csrf_meta_tag
 
-    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Dancing+Script&v1'
+    -#= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Dancing+Script&v1'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Marvel'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Delius'
 
