--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -2,107 +2,87 @@
 body.bp {
   text-align: center;
 }
-/* line 44, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 48, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 * html body.bp legend {
   margin: 0px -8px 16px 0;
   padding: 0;
 }
-/* line 48, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 52, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 html > body.bp p code {
   *white-space: normal;
 }
-/* line 60, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 67, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp .container {
   text-align: left;
 }
-/* line 62, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 69, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp sup {
   vertical-align: text-top;
 }
-/* line 64, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 71, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp sub {
   vertical-align: text-bottom;
 }
-/* line 66, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 73, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp hr {
   margin: -8px auto 11px;
 }
-/* line 68, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 75, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp img {
   -ms-interpolation-mode: bicubic;
 }
-/* line 70, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 77, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp fieldset {
   padding-top: 0;
 }
-/* line 72, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp legend {
-  margin-top: -0.2em;
-  margin-bottom: 1em;
-  margin-left: -0.5em;
-}
-/* line 76, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp fieldset, body.bp #IE8#HACK {
-  padding-top: 1.4em;
-}
-/* line 77, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp legend, body.bp #IE8#HACK {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-/* line 78, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 79, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp textarea {
   overflow: auto;
 }
-/* line 80, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp label {
-  position: relative;
-  top: -0.25em;
-}
-/* line 84, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 82, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.text {
   margin: 0.5em 0;
   background-color: white;
   border: 1px solid #bbbbbb;
 }
-/* line 88, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 86, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.text:focus {
   border: 1px solid #666666;
 }
-/* line 90, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 88, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.title {
   margin: 0.5em 0;
   background-color: white;
   border: 1px solid #bbbbbb;
 }
-/* line 94, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 92, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.title:focus {
   border: 1px solid #666666;
 }
-/* line 96, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 94, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.checkbox {
   position: relative;
   top: 0.25em;
 }
-/* line 99, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 97, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.radio {
   position: relative;
   top: 0.25em;
 }
-/* line 102, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 100, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.button {
   position: relative;
   top: 0.25em;
 }
-/* line 105, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 103, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp textarea {
   margin: 0.5em 0;
 }
-/* line 107, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 105, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp select {
   margin: 0.5em 0;
 }
-/* line 109, /home/chrismar035/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+/* line 107, /home/cmarshall/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp button {
   position: relative;
   top: 0.25em;
