--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,12 +17,12 @@
     =yield :header
   %body.bp
     .container
-      #header.span-24.last
+      #header.span-22.prepend-1.append-1
         %h2{ :style => "float:left;"}
           Hayley Facer & Christopher Marshall 
         %h3{ :style => "float:right;"}
           7.21.12
-      .container.span-24
+      .container.span-22.prepend-1.append-1
         .span-4
           %ul#top_nav
             %li= link_to 'Home', root_path
@@ -30,6 +30,10 @@
             %li= link_to 'Game', game_path
 
         #main_content.span-18.append-2.last
+          -if notice
+            %p.notice= notice
+          -if alert
+            %p.alert= alert
           = yield
       #footer.span-22.prepend-2.last
     = javascript_include_tag 'jquery-1.6.1.min.js'
