--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -18,7 +18,7 @@ $blue_ribbon:#367cda;
 ul#top_nav
 {
   position:relative;
-  padding:0;
+  padding:4px 0 4px 0;
   margin-left:8px;
   border-right:1px solid $blue_ribbon;
   font-family: 'Delius', arial, serif;
