--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -20,7 +20,7 @@
 /* line 19, ../../app/stylesheets/site.scss */
 ul#top_nav {
   position: relative;
-  padding: 0;
+  padding: 4px 0 4px 0;
   margin-left: 8px;
   border-right: 1px solid #367cda;
   font-family: 'Delius', arial, serif;
