--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -1,7 +1,7 @@
 $blue_ribbon:#367cda;
 
-.bold { 
-  font-weight:bold; 
+.bold {
+  font-weight:bold;
 }
 
 .container {
@@ -14,7 +14,7 @@ $blue_ribbon:#367cda;
   height: 175px;
   background: url('/images/header_bg.png') no-repeat center top;
   font-family: 'Montez', arial, serif;
-  h3, h2 { 
+  h3, h2 {
     margin:60px 12px 0px 12px;
     line-height:1.2em;
   }
@@ -26,18 +26,18 @@ ul#top_nav
   margin-left:8px;
   border-right:1px solid $blue_ribbon;
   font-family: 'Delius', arial, serif;
-  li 
-  { 
+  li
+  {
     list-style:none;
     font-size:2em;
     height:51px;
     &:hover { background: $blue_ribbon; }
-    a 
-    { 
+    a
+    {
       color:$blue_ribbon;
       &:hover { color: darken($blue_ribbon, 30%); }
       padding-left:8px;
-      display:block; 
+      display:block;
       text-decoration:none;
     }
   }
@@ -53,12 +53,12 @@ ul#news_list
 {
   list-style:none;
   li.first { border-top:none;}
-  li 
-  { 
+  li
+  {
     border-top:1px solid lighten($blue_ribbon, 20%);
     margin-top:1em;
   }
-  li .date 
+  li .date
   {
     font-weight:bold;
     /* margin-bottom:.5em;*/
@@ -111,3 +111,9 @@ ul#news_list
   }
 }
 
+#budget_table {
+  tfoot tr td {
+    font-weight:bold;
+    border-top:1px solid $blue_ribbon;
+  }
+}
