Added Edit and Delete to Budget Items

--- a/app/views/budget_items/new.html.haml
+++ b/app/views/budget_items/new.html.haml
@@ -1,20 +1,1 @@
-= form_tag '/budget' do
-  .field
-    = label_tag :type
-    = select_tag :type, options_for_select(@item_types)
-  .field
-    = label_tag :units
-    = text_field_tag :units
-  .field
-    = label_tag :rate
-    = text_field_tag :rate
-  .field
-    = label_tag :title
-    = text_field_tag :title
-  .field
-    = label_tag :balance_due_on
-    = text_field_tag :balance_due_on
-
-  .field
-    = submit_tag 'Save'
-  
+= render 'form' 
