--- a/app/views/budget_items/index.html.haml
+++ b/app/views/budget_items/index.html.haml
@@ -6,6 +6,7 @@
       %th Units
       %th Rate
       %th Total
+      %th
   %tbody
     -total = 0
     -@items.each do |item|
@@ -15,6 +16,9 @@
         %td= item.units
         %td= number_to_currency item.rate
         %td= number_to_currency item.total
+        %td
+          #{link_to "Edit", edit_budget_item_path(item)},
+          #{link_to "Delete", budget_item_path(item), :method => :delete, :confirm => "You sure?"}
   %tfoot
     %tr
       %td
