Changed main content fonts

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -44,6 +44,10 @@ ul#top_nav
 
 #main_content
 {
+  h1 {
+    font-family: 'Montez', serif;
+  }
+  font-family: 'Delius', arial, serif;
   margin-top:1em;
   font-size:18pt;
 }
