--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -120,3 +120,9 @@ ul#news_list
     border-top:1px solid $blue_ribbon;
   }
 }
+
+#error_message {
+  border:3px solid red;
+  margin:0.5em 3em;
+  padding:0.5em;
+}
