--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -135,3 +135,10 @@ ul#news_list li .date {
   font-weight: bold;
   border-top: 1px solid #367cda;
 }
+
+/* line 124, ../../app/stylesheets/site.scss */
+#error_message {
+  border: 3px solid red;
+  margin: 0.5em 3em;
+  padding: 0.5em;
+}
