--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -3,6 +3,8 @@ $blue_ribbon:#367cda;
 .bold {
   font-weight:bold;
 }
+.align-right { text-align:right; }
+.clear { clear:both; }
 
 .container {
   font-size:1.2em;
