--- a/app/views/budget_items/_form.html.haml
+++ b/app/views/budget_items/_form.html.haml
@@ -10,7 +10,7 @@
       %td
         = f.label :title
       %td
-        = f.text_field :title, :value => @item.title
+        = f.text_field :title
     %tr
       %td
         = f.label :type
@@ -20,17 +20,17 @@
       %td
         = f.label :units
       %td
-        = f.text_field :units, :value => @item.units
+        = f.text_field :units
     %tr
       %td
         = f.label :rate
       %td
-        = f.text_field :rate, :value => @item.rate
+        = f.text_field :rate
     %tr
       %td
         = f.label :balance_due_on
       %td
-        = f.text_field :balance_due_on, :value =>@item.balance_due_on
+        = f.text_field :balance_due_on
     %tr
       %td{ :colspan => 2}
         = f.submit 'Save'
