Fixed some budget items index styles

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -5,6 +5,7 @@ $blue_ribbon:#367cda;
 }
 .align-right { text-align:right; }
 .clear { clear:both; }
+.blue-color { color:$blue_ribbon; }
 
 .container {
   font-size:1.2em;
