--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -13,98 +13,103 @@
   clear: both;
 }
 
-/* line 9, ../../app/stylesheets/site.scss */
+/* line 8, ../../app/stylesheets/site.scss */
+.blue-color {
+  color: #367cda;
+}
+
+/* line 10, ../../app/stylesheets/site.scss */
 .container {
   font-size: 1.2em;
   background: url("/images/continuous_bg.png") repeat-y center top;
   font-family: 'Montez', serif;
 }
 
-/* line 15, ../../app/stylesheets/site.scss */
+/* line 16, ../../app/stylesheets/site.scss */
 #header {
   height: 175px;
   background: url("/images/header_bg.png") no-repeat center top;
   font-family: 'Montez', arial, serif;
 }
-/* line 19, ../../app/stylesheets/site.scss */
+/* line 20, ../../app/stylesheets/site.scss */
 #header h3, #header h2 {
   margin: 60px 12px 0px 12px;
   line-height: 1.2em;
 }
 
-/* line 25, ../../app/stylesheets/site.scss */
+/* line 26, ../../app/stylesheets/site.scss */
 ul#top_nav {
   position: relative;
   padding: 4px 0 4px 0;
   border-right: 1px solid #367cda;
   font-family: 'Delius', arial, serif;
 }
-/* line 31, ../../app/stylesheets/site.scss */
+/* line 32, ../../app/stylesheets/site.scss */
 ul#top_nav li {
   list-style: none;
   font-size: 2em;
   height: 51px;
 }
-/* line 35, ../../app/stylesheets/site.scss */
+/* line 36, ../../app/stylesheets/site.scss */
 ul#top_nav li:hover {
   background: #367cda;
 }
-/* line 37, ../../app/stylesheets/site.scss */
+/* line 38, ../../app/stylesheets/site.scss */
 ul#top_nav li a {
   color: #367cda;
   padding-left: 8px;
   display: block;
   text-decoration: none;
 }
-/* line 39, ../../app/stylesheets/site.scss */
+/* line 40, ../../app/stylesheets/site.scss */
 ul#top_nav li a:hover {
   color: #133665;
 }
 
-/* line 48, ../../app/stylesheets/site.scss */
+/* line 49, ../../app/stylesheets/site.scss */
 #main_content {
   font-family: 'Delius', arial, serif;
   margin-top: 1em;
   font-size: 18pt;
 }
-/* line 49, ../../app/stylesheets/site.scss */
+/* line 50, ../../app/stylesheets/site.scss */
 #main_content h1 {
   font-family: 'Montez', serif;
 }
 
-/* line 58, ../../app/stylesheets/site.scss */
+/* line 59, ../../app/stylesheets/site.scss */
 ul#news_list {
   list-style: none;
 }
-/* line 60, ../../app/stylesheets/site.scss */
+/* line 61, ../../app/stylesheets/site.scss */
 ul#news_list li.first {
   border-top: none;
 }
-/* line 62, ../../app/stylesheets/site.scss */
+/* line 63, ../../app/stylesheets/site.scss */
 ul#news_list li {
   border-top: 1px solid #8cb4ea;
   margin-top: 1em;
 }
-/* line 67, ../../app/stylesheets/site.scss */
+/* line 68, ../../app/stylesheets/site.scss */
 ul#news_list li .date {
   font-weight: bold;
   /* margin-bottom:.5em;*/
 }
 
-/* line 74, ../../app/stylesheets/site.scss */
+/* line 75, ../../app/stylesheets/site.scss */
 #footer {
   background: url("/images/footer_bg.png") no-repeat center bottom;
   height: 200px;
 }
 
-/* line 79, ../../app/stylesheets/site.scss */
+/* line 80, ../../app/stylesheets/site.scss */
 #boxcard {
   margin: 0 auto;
   width: 625px;
   z-index: 1;
 }
 
-/* line 85, ../../app/stylesheets/site.scss */
+/* line 86, ../../app/stylesheets/site.scss */
 #boxcard div {
   float: left;
   width: 100px;
@@ -123,30 +128,30 @@ ul#news_list li .date {
   z-index: 2;
 }
 
-/* line 103, ../../app/stylesheets/site.scss */
+/* line 104, ../../app/stylesheets/site.scss */
 #boxcard div img {
   border: none;
   z-index: 3;
 }
 
-/* line 108, ../../app/stylesheets/site.scss */
+/* line 109, ../../app/stylesheets/site.scss */
 .opacity {
   opacity: .6;
   filter: alpha(opacity=60);
 }
 
-/* line 115, ../../app/stylesheets/site.scss */
+/* line 116, ../../app/stylesheets/site.scss */
 .highlighted_table tr:hover {
   background-color: #b7d0f2;
 }
 
-/* line 120, ../../app/stylesheets/site.scss */
+/* line 121, ../../app/stylesheets/site.scss */
 #budget_table tfoot tr td {
   font-weight: bold;
   border-top: 1px solid #367cda;
 }
 
-/* line 126, ../../app/stylesheets/site.scss */
+/* line 127, ../../app/stylesheets/site.scss */
 #error_message {
   border: 3px solid red;
   margin: 0.5em 3em;
