Added info page

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -6,6 +6,9 @@ $blue_ribbon:#367cda;
 .align-right { text-align:right; }
 .clear { clear:both; }
 .blue-color { color:$blue_ribbon; }
+.big {
+  font-size:1.5em;
+}
 
 .container {
   font-size:1.2em;
