--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,9 @@
 %ul#news_list
   %li.first
+    .date 2.27.12
+    Additional Planning Information added in the 
+    = link_to "Info page", info_path
+  %li
     .date 8.21.11 
     %span{ :style => 'font-size:1.5em;' }
       Engagement Pictures 
