--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,6 @@
         =@title
         |
       Crayley: for officials
-    = javascript_include_tag :defaults
     = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'grid.css', :media => 'screen, projection'
     = stylesheet_link_tag 'print.css', :media => 'print'
@@ -37,6 +36,7 @@
         .span-4
           %ul#top_nav
             %li= link_to 'Home', root_path
+            %li= link_to 'Info', info_path
             %li= link_to 'Pics', pics_path
             %li= link_to 'Game', game_path
             -if user_signed_in?
@@ -51,9 +51,9 @@
             %p.alert= alert
           = yield
       #footer.span-22.prepend-2.last
-    = javascript_include_tag 'jquery-1.6.1.min.js'
+    = javascript_include_tag :defaults
     = yield :javascript
-    :javascript
+    -# :javascript
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-12130430-4']);
       _gaq.push(['_trackPageview']);
