--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -18,98 +18,103 @@
   color: #367cda;
 }
 
-/* line 10, ../../app/stylesheets/site.scss */
+/* line 9, ../../app/stylesheets/site.scss */
+.big {
+  font-size: 1.5em;
+}
+
+/* line 13, ../../app/stylesheets/site.scss */
 .container {
   font-size: 1.2em;
   background: url("/images/continuous_bg.png") repeat-y center top;
   font-family: 'Montez', serif;
 }
 
-/* line 16, ../../app/stylesheets/site.scss */
+/* line 19, ../../app/stylesheets/site.scss */
 #header {
   height: 175px;
   background: url("/images/header_bg.png") no-repeat center top;
   font-family: 'Montez', arial, serif;
 }
-/* line 20, ../../app/stylesheets/site.scss */
+/* line 23, ../../app/stylesheets/site.scss */
 #header h3, #header h2 {
   margin: 60px 12px 0px 12px;
   line-height: 1.2em;
 }
 
-/* line 26, ../../app/stylesheets/site.scss */
+/* line 29, ../../app/stylesheets/site.scss */
 ul#top_nav {
   position: relative;
   padding: 4px 0 4px 0;
   border-right: 1px solid #367cda;
   font-family: 'Delius', arial, serif;
 }
-/* line 32, ../../app/stylesheets/site.scss */
+/* line 35, ../../app/stylesheets/site.scss */
 ul#top_nav li {
   list-style: none;
   font-size: 2em;
   height: 51px;
 }
-/* line 36, ../../app/stylesheets/site.scss */
+/* line 39, ../../app/stylesheets/site.scss */
 ul#top_nav li:hover {
   background: #367cda;
 }
-/* line 38, ../../app/stylesheets/site.scss */
+/* line 41, ../../app/stylesheets/site.scss */
 ul#top_nav li a {
   color: #367cda;
   padding-left: 8px;
   display: block;
   text-decoration: none;
 }
-/* line 40, ../../app/stylesheets/site.scss */
+/* line 43, ../../app/stylesheets/site.scss */
 ul#top_nav li a:hover {
   color: #133665;
 }
 
-/* line 49, ../../app/stylesheets/site.scss */
+/* line 52, ../../app/stylesheets/site.scss */
 #main_content {
   font-family: 'Delius', arial, serif;
   margin-top: 1em;
   font-size: 18pt;
 }
-/* line 50, ../../app/stylesheets/site.scss */
+/* line 53, ../../app/stylesheets/site.scss */
 #main_content h1 {
   font-family: 'Montez', serif;
 }
 
-/* line 59, ../../app/stylesheets/site.scss */
+/* line 62, ../../app/stylesheets/site.scss */
 ul#news_list {
   list-style: none;
 }
-/* line 61, ../../app/stylesheets/site.scss */
+/* line 64, ../../app/stylesheets/site.scss */
 ul#news_list li.first {
   border-top: none;
 }
-/* line 63, ../../app/stylesheets/site.scss */
+/* line 66, ../../app/stylesheets/site.scss */
 ul#news_list li {
   border-top: 1px solid #8cb4ea;
   margin-top: 1em;
 }
-/* line 68, ../../app/stylesheets/site.scss */
+/* line 71, ../../app/stylesheets/site.scss */
 ul#news_list li .date {
   font-weight: bold;
   /* margin-bottom:.5em;*/
 }
 
-/* line 75, ../../app/stylesheets/site.scss */
+/* line 78, ../../app/stylesheets/site.scss */
 #footer {
   background: url("/images/footer_bg.png") no-repeat center bottom;
   height: 200px;
 }
 
-/* line 80, ../../app/stylesheets/site.scss */
+/* line 83, ../../app/stylesheets/site.scss */
 #boxcard {
   margin: 0 auto;
   width: 625px;
   z-index: 1;
 }
 
-/* line 86, ../../app/stylesheets/site.scss */
+/* line 89, ../../app/stylesheets/site.scss */
 #boxcard div {
   float: left;
   width: 100px;
@@ -128,30 +133,30 @@ ul#news_list li .date {
   z-index: 2;
 }
 
-/* line 104, ../../app/stylesheets/site.scss */
+/* line 107, ../../app/stylesheets/site.scss */
 #boxcard div img {
   border: none;
   z-index: 3;
 }
 
-/* line 109, ../../app/stylesheets/site.scss */
+/* line 112, ../../app/stylesheets/site.scss */
 .opacity {
   opacity: .6;
   filter: alpha(opacity=60);
 }
 
-/* line 116, ../../app/stylesheets/site.scss */
+/* line 119, ../../app/stylesheets/site.scss */
 .highlighted_table tr:hover {
   background-color: #b7d0f2;
 }
 
-/* line 121, ../../app/stylesheets/site.scss */
+/* line 124, ../../app/stylesheets/site.scss */
 #budget_table tfoot tr td {
   font-weight: bold;
   border-top: 1px solid #367cda;
 }
 
-/* line 127, ../../app/stylesheets/site.scss */
+/* line 130, ../../app/stylesheets/site.scss */
 #error_message {
   border: 3px solid red;
   margin: 0.5em 3em;
