Better Specific Info page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
         .span-4
           %ul#top_nav
             %li= link_to 'Home', root_path
-            %li= link_to 'Info', info_path
+            %li= link_to 'Specs', info_path
             %li= link_to 'Pics', pics_path
             %li= link_to 'Game', game_path
             -if user_signed_in?
