--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,8 +1,12 @@
 %ul#news_list
   %li.first
     .date 2.27.12
-    Additional Planning Information added in the 
-    = link_to "Info page", info_path
+    =link_to "Additional Wedding Specifics", info_path
+    have been given a home on their own page.
+    The Bertram is 
+    %span.bold now accepting reservations for rooms
+    , if anyone needs them. You can place them under the
+    Marshall/Facer Wedding block!
   %li
     .date 8.21.11 
     %span{ :style => 'font-size:1.5em;' }
