Fixed dates in Google Calendar button

--- a/app/views/welcome/info.html.haml
+++ b/app/views/welcome/info.html.haml
@@ -4,7 +4,7 @@
   .bold.big
     July 21, 2012
     %br
-    <a href="http://www.google.com/calendar/event?action=TEMPLATE&text=Chris%20Marshall%20%26%20Hayley%20Facer%20Wedding&dates=20120721/20110102&details=The%20wedding%20of%20Chris%20Marshall%20%26%20Hayley%20Facer.%20Reception%20to%20follow&location=The%20Bertram%20Inn%20and%20Conference%20Center&trp=false&sprop=http%3A%2F%2Fcrayley.com&sprop=name:Crayley.com" target="_blank"><img src="//www.google.com/calendar/images/ext/gc_button2.gif" alt="0" border="0"></a>
+    <a href="http://www.google.com/calendar/event?action=TEMPLATE&text=Chris%20Marshall%20%26%20Hayley%20Facer%20Wedding&dates=20120721/20120721&details=The%20wedding%20of%20Chris%20Marshall%20%26%20Hayley%20Facer.%20Reception%20to%20follow.&location=The%20Bertram%20Inn%20and%20Conference%20Center&trp=false&sprop=http%3A%2F%2Fcrayley.com&sprop=name:Crayley.com" target="_blank"><img src="//www.google.com/calendar/images/ext/gc_button2.gif" alt="0" border="0"></a>
 %p
   .normal
     Where:
